replace lorem texts

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       
       <div id="about" class="paragraph">
        <div class="me"><h1>About me</h1></div> 
-       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae cupiditate doloremque repellat itaque ad illum velit, laboriosam voluptatum, unde adipisci distinctio quis suscipit corporis reprehenderit molestias dolorem vel deserunt. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloribus possimus, deleniti nostrum officiis expedita explicabo eveniet id voluptas maxime consequatur ullam sunt sapiente quos nobis cupiditate repellendus cum temporibus! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, accusamus nemo! Blanditiis rem explicabo tenetur officiis, modi numquam eius ullam non maiores adipisci aliquam nam officia veniam. Rerum, et provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum vero nobis cumque nam provident! Suscipit laudantium ipsam porro? Sequi unde quaerat corrupti, excepturi temporibus maiores culpa voluptatum cupiditate adipisci ullam?
+       Hello I'm Sumit Dhakal, a passionate aspiring Flutter developer with a strong desire to make a mark in the world of mobile app development. Though lacking professional experience, I'm dedicated to mastering Flutter's toolkit. I'm excited to collaborate, learn from fellow developers, and contribute to the vibrant Flutter community. 
       </div>
       <div class="download" id="resume">
-        <a href="/img/sumit.jpg" download="resume.jpg">view my resume here</a>
+        <a href="/img/myresume.jpg" download="resume.jpg">RESUME HERE</a>
       </div>
       <br>
       <hr>
